--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
   
-    <title>School</title>
+    <!-- <title>School manage</title> -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
